RESOLVED FIXED73624
JIT+ INTERPRETER builds are broken
https://bugs.webkit.org/show_bug.cgi?id=73624
Summary JIT+ INTERPRETER builds are broken
Gavin Barraclough
Reported 2011-12-01 22:21:14 PST
These don't fallback to the interpreter correctly. Thunk creation assumes that is the JIT is compiled in, then it is enabled.
Attachments
fix (4.43 KB, patch)
2011-12-01 22:23 PST, Gavin Barraclough
no flags
Patch as landed, with RS changes courtesy of Sam. (5.65 KB, patch)
2011-12-05 10:28 PST, Gavin Barraclough
no flags
Gavin Barraclough
Comment 1 2011-12-01 22:23:48 PST
Geoffrey Garen
Comment 2 2011-12-01 22:26:20 PST
Comment on attachment 117567 [details] fix r=me
Gyuyoung Kim
Comment 3 2011-12-01 22:28:03 PST
Early Warning System Bot
Comment 4 2011-12-01 22:29:14 PST
Gustavo Noronha (kov)
Comment 5 2011-12-02 06:39:01 PST
Gavin Barraclough
Comment 6 2011-12-05 10:28:44 PST
Created attachment 117894 [details] Patch as landed, with RS changes courtesy of Sam.
Gavin Barraclough
Comment 7 2011-12-05 10:29:13 PST
Fixed in r102011
David Kilzer (:ddkilzer)
Comment 8 2011-12-05 16:26:59 PST
Note You need to log in before you can comment on or make changes to this bug.