https://bugs.webkit.org/show_bug.cgi?id=73624 JIT + INTERPRETER builds are broken

Reviewed by Geoff Garen, Sam Weinig.

These don't fallback to the interpreter correctly.
Thunk creation assumes that is the JIT is compiled in, then it is enabled.

* jit/JITStubs.cpp:
(JSC::JITThunks::JITThunks):
* runtime/Executable.h:
(JSC::NativeExecutable::create):
(JSC::NativeExecutable::finishCreation):
* runtime/JSGlobalData.cpp:
(JSC::JSGlobalData::getHostFunction):



Canonical link: https://commits.webkit.org/90474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102011 268f45cc-cd09-0410-ab3c-d52691b4dbfc